2000-03-31  Ulrich Drepper  <drepper@redhat.com>

	* iconv/skeleton.c: Define access macros with u suffix.  Adjust
	#if expression for use of unaligned function to the one used in
	the definition of these functions.
	* iconv/loop.c: Undefined `unaligned' before recursive inclusion.
	* iconv/gconv_simple.c (internal_ucs4_loop_unaligned): New function.
	(internal_ucs4le_loop_unaligned): New function.

	* elf/Makefile (distribute): Add dep1.c, dep2.c, dep3.c, and dep4.c.
	(tests): Add order.
	(module-names): Add dep1, dep2, dep3, and dep4.
	Add dependencies for dep* modules and order.
	Define rule for order.out which checks the result.
	* elf/dep1.c: New file.
	* elf/dep2.c: New file.
	* elf/dep3.c: New file.
	* elf/dep4.c: New file.
	* elf/order.c: New file.

	* elf/dl-init.c: Fix type in comment.

2000-03-31  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/dl-machine.h (RTLD_START): Rewritten to match new
	init function interface.
	* sysdeps/mips/mips64/dl-machine.h (RTLD_START): Likewise.

2000-03-31  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/fpu/fgetexcptflg.c: Fix last patch to use #if.
	* sysdeps/mips/fpu/fegetenv.c: Likewise.
	* sysdeps/mips/fpu/feupdateenv.c: Likewise.
	* sysdeps/mips/fpu/fclrexcpt.c: Likewise.
	* sysdeps/mips/fpu/fesetenv.c: Likewise.

	* sysdeps/generic/ldsodefs.h: DT_INIT_ARRAY is not relocated
	  anymore, update comment.

	* sysdeps/unix/sysv/linux/shmctl.c: Likewise.

	* sysdeps/unix/sysv/linux/semctl.c (struct __old_semid_ds): Remove
	SHLIB_COMPAT - the struct is always needed.

2000-03-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/dl-machine.h (RTLD_START): Optimize for i686.
	* elf/dl-support.c: Define _dl_starting_up.

2000-03-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-init.c (_dl_init): Clear _dl_starting_up at end of function.
	* sysdeps/i386/dl-machine.h: Remove code to clear _dl_starting_up.

	* misc/sys/cdefs.h: Don't allow gcc in traditional mode to be used.

	* elf/Makefile (dl-routines): Remove preinit.